@@ -1,5 +1,12 @@
 2008-04-15  Dan Williams  <dcbw@redhat.com>
 
+	* src/ap-menu-item.c
+	  src/applet-device-wireless.c
+	  src/utils/utils.c
+		- Replace IW_MODE_* with NM_802_11_MODE
+
+2008-04-15  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/wireless-security.c
 	  src/wireless-security/eap-method-leap.c
 	  src/wireless-security/ws-dynamic-wep.c
